--- a/configservice/src/main/resources/bootstrap.yml
+++ b/configservice/src/main/resources/bootstrap.yml
@@ -3,11 +3,13 @@ server:
 
 spring:
   cloud:
-    server:
-      git:
-        # url de respositorio donde estan ubicados los yml de los proyectos
-        uri: https://github.com/speraignacio/BootcampSpringCloud.git
-        searchPaths: config-data
+    config:
+      server:
+        git:
+          # url de respositorio donde estan ubicados los yml de los proyectos
+          uri: https://github.com/speraignacio/BootcampSpringCloud.git
+          # especificamos donde estan los archivos de configuracion de nuestro proyecto
+          searchPaths: config-data
   security:
     user:
       name: root
